# services-market-in-telegram

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  docker-compose.yml  package-lock.json  skills-lock.json
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260525_0001_initial.py  20260528_0002_project_category_and_views.py  20260529_0003_profile_redesign.py  20260529_0004_project_pause_and_published_at.py  20260530_0005_specialist_multi_category.py  20260530_0006_review_half_stars.py  20260531_0008_drop_messages_and_referee_activation.py  20260601_0007_language_and_template_translations.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: categories.py  config.py  db.py  deps.py  i18n.py  redis.py  security.py  service_catalog.py
backend/app/models/: __init__.py  application.py  base.py  chat.py  notification.py  profile.py  project.py  (+7 more)
backend/tests/: conftest.py  test_apply_referee_gate.py  test_auth_api.py  test_categories.py  test_chat_relay.py  test_feed_filters.py  test_i18n.py  test_project_flow.py  test_public_profile.py  test_referee_activation.py  test_relay_queue.py  test_reviews_and_customer.py  test_security.py  test_services.py  test_specialists_filters.py  test_timeline.py
bots/: Dockerfile  README.md  pyproject.toml
bots/common/: auth.py  db.py  i18n.py  lang.py  lang_command.py  lookup.py  notifications.py
bots/customers_bot/: main.py
bots/doers_bot/: main.py
bots/referee_bot/: main.py
(+254 files in other folders)
