[project]
name = "doings-backend"
version = "0.1.0"
description = "Doings — Telegram-native IT freelance marketplace backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "bcrypt>=4.0.1,<4.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "anyio>=4.4",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008"]  # FastAPI Depends in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
