[project]
name = "doings-bots"
version = "0.1.0"
description = "Doings — aiogram bot processes"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10",
    "doings-backend",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["bots*"]
namespaces = true
